# CDFR24_SW

./: .gitignore  .gitmodules  README.md
src/debug_tools_pkg/: CMakeLists.txt  package.xml
src/debug_tools_pkg/src/: DebuggerMotors.cpp
src/hw_support_interfaces_pkg/: CMakeLists.txt  package.xml
src/hw_support_interfaces_pkg/msg/: BoardStatus.msg  CanFrame.msg  DistributionTelemetry.msg  EncodersPosition.msg  MotorsState.msg  ScreenAction.msg
src/hw_support_interfaces_pkg/srv/: CanFrame.srv  GetEncoderPosition.srv  MotorsSettings.srv  ServoGoto.srv
src/hw_support_pkg/: CMakeLists.txt  package.xml  robot_hardware.xml
src/hw_support_pkg/include/hw_support_pkg/: ActuatorBoard.hpp  ActuatorBoardProtocol.hpp  CAN_support.hpp  DistributionBoard.hpp  DistributionBoardProtocol.hpp  GenericBoard.hpp  MotorBoard.hpp  MotorBoardProtocol.hpp  SteeringHardwareInterface.hpp
src/hw_support_pkg/launch/: pc.launch.py  rpi.launch.py  test.launch.py
src/hw_support_pkg/src/: ActuatorBoard.cpp  CAN_support.cpp  DistributionBoard.cpp  GenericBoard.cpp  MotorBoard.cpp  SteeringHardwareInterface.cpp
src/loc_pkg/: package.xml  setup.cfg  setup.py
src/loc_pkg/config/: beacons.yaml  init.yaml  loc_cfg.yaml
src/loc_pkg/launch/: loc.launch.py
src/loc_pkg/loc_pkg/: localization_node.py
src/loc_pkg/loc_pkg/localization/: Beacon.py  BeaconLibrary.py  Cluster.py  ClusterFilter.py  Clustering.py  LocalizationProcess.py  LowLevelFilter.py  Point.py  Position.py  PositionPredictor.py  Triangulation.py  __init__.py  loc_utils.py
src/loc_pkg/test/: test_cluster.py  test_cluster_filter.py  test_clustering.py  test_loc_utils.py  test_low_level_filter.py  test_point.py  test_position.py  test_position_prediction.py
src/robot_pkg/: CMakeLists.txt  package.xml  robot_pkg_plugin.xml
src/robot_pkg/config/: diff_drive_controller.yaml  gazebo_params.yaml  robot_controllers.yaml
src/robot_pkg/description/: gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/robot_pkg/hardware/: diffbot_system.cpp
src/robot_pkg/hardware/include/robot_pkg/: diffbot_system.hpp  visibility_control.h
src/robot_pkg/launch/: launch_robot.launch.py  launch_sim.launch.py  launch_sim_loc.launch.py  rsp.launch.py
src/robot_pkg/world/: odom_world.sdf
src/test_odom_pkg/: package.xml  setup.cfg  setup.py
src/test_odom_pkg/config/: ekf.yaml
src/test_odom_pkg/test_odom_pkg/: clustering_process.py  loc_node.py  position_resolver.py
